--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       DATE:   { description: "YYYYMMDD", required: true,  type: string }
-      PID:    { description: "場コード 01..24（カンマ可）", required: true, type: string }
+      PID:    { description: "場コード 01..24（カンマ可 / 空 or all = 全場）", required: false, default: "", type: string }
       MODE:   { description: "predict or eval", required: true, default: "predict", type: choice, options: [predict, eval] }
       SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
       TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
@@ -37,6 +37,21 @@ jobs:
           set -e
           python -m pip install --upgrade pip
           pip install numpy pandas joblib scikit-learn
+
+      - name: Normalize PID (expand empty/all -> 01..24)
+        id: pidnorm
+        env:
+          RAW_PID: ${{ inputs.PID }}
+        run: |
+          set -euo pipefail
+          if [[ -z "${RAW_PID}" || "${RAW_PID,,}" == "all" ]]; then
+            EXP="$(printf '%s,' $(seq -w 1 24) | sed 's/,$//')"
+          else
+            EXP="${RAW_PID}"
+          fi
+          echo "PID_EXP=${EXP}"
+          echo "PID_EXP=${EXP}" >> $GITHUB_OUTPUT
+          echo "PID_EXP=${EXP}" >> $GITHUB_ENV
 
       - name: Parse FILTERS & KEYMAN
         id: parse
@@ -80,7 +95,7 @@ jobs:
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
-          PID:   ${{ inputs.PID }}
+          PID:   ${{ steps.pidnorm.outputs.PID_EXP }}
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
@@ -100,23 +115,24 @@ jobs:
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
-          PID:  ${{ inputs.PID }}
+          PID:  ${{ steps.pidnorm.outputs.PID_EXP }}
         run: |
           set -euo pipefail
           mkdir -p "TENKAI/predictions/v1/$DATE"
           echo "[tenkai] $DATE / $PID"
+          # tenkai 側がカンマ区切りに対応している前提
           python TENKAI/tenkai_predict_integrated.py \
             --date "$DATE" --pid "$PID"
 
       - name: Show ML CSVs
         run: |
-          find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 2 -type f -name '*.csv' | sort || true
+          find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 3 -type f -name '*.csv' | sort || true
 
       # 3) Pass2: MLを読み込んだ統合SimS
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
-          PID:   ${{ inputs.PID }}
+          PID:   ${{ steps.pidnorm.outputs.PID_EXP }}
           MODE:  ${{ inputs.MODE }}
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
